<resources>
    <string name="app_name">VseLokalno</string>
    <string name="title_activity_sign_in_up">SignInUp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zacnimo">Začnimo</string>
    <string name="vpisi_se">Vpiši se</string>
    <string name="vpis">Vpis</string>
    <string name="vnesite_e_postni_naslov">Vnesite e-poštni naslov.</string>
    <string name="vnesite_geslo">Vnesite geslo.</string>
    <string name="vpisi_me">Vpiši me</string>
    <string name="naprej">Naprej</string>
    <string name="proizvajalec">Proizvajalec</string>
    <string name="kupec">Kupec</string>
    <string name="kmetija">Kmetija</string>
    <string name="prijavljam_se_kot">Prijavljam se kot</string>
    <string name="moj_e_postni_naslov_je">Moj e-poštni naslov je</string>
    <string name="email_pojasnilo">Vnesite svoj e-poštni naslov, s katerim boste lahko dostopali do svojega profila.</string>
    <string name="vnesite_ime">Vnesite ime.</string>
    <string name="vnesite_priimek">Vnesite priimek.</string>
    <string name="ime_pojasnilo">Vnesite nekaj osnovnih podatkov, s katerimi vas lahko ostali uporabniki prepoznajo.</string>
    <string name="moje_geslo_naj_bo">Moje geslo naj bo</string>
    <string name="ponovite_geslo">Ponovite geslo.</string>
    <string name="z_vne_enim_geslom_se_lahko_prijavljate_v_profil">Z vnešenim geslom se lahko prijavljate v profil.</string>
    <string name="moje_ime_je">Moje ime je</string>
    <string name="registriraj_me">Registriraj me</string>
    <string name="profilka_detail">Neobvezno! S profilno sliko vas ostali uporabniki lažje prepoznajo.</string>
    <string name="izberi_sliko">Izberi sliko</string>
    <string name="prilo_i_profilno_sliko">Priloži profilno sliko</string>
    <string name="shared_pref_file">Vse_lokalno_shared_preferences</string>
    <string name="ime_kmetije_je">Ime kmetije je</string>
    <string name="farm_creator_explain">Vnesite nekaj osnovnih podatkov, s katerimi vas bodo potencialni kupci prepoznajo.</string>
    <string name="nekaj_o_kmetiji">Nekaj o kmetiji</string>
    <string name="vnesite_kratek_opis_kmetije">Vnesite kratek opis kmetije.</string>
    <string name="naslov_kmetije">Naslov kmetije</string>
    <string name="vnesite_naslov_kmetije">Vnesite naslov kmetije.</string>
    <string name="vnesite_naslov_za_dvig">Vnesite naslov za dvig.</string>
    <string name="lokacija_za_dvig_je_na_kmetiji">Lokacija za dvig, je na kmetiji.</string>
    <string name="lokacija_za_dvig_ni_na_kmetiji">Lokacija za dvig, ni na kmetiji.</string>
    <string name="cas_prevzema">Čas prevzema</string>
    <string name="pon">Pon</string>
    <string name="tor">Tor</string>
    <string name="sre">Sre</string>
    <string name="cet">Čet</string>
    <string name="pet">Pet</string>
    <string name="sob">Sob</string>
    <string name="ned">Ned</string>
    <string name="_08_00_09_00">08:00–09:00</string>
    <string name="_09_00_10_00">09:00–10:00</string>
    <string name="_20_00_21_00">20:00–21:00</string>
    <string name="_19_00_20_00">19:00–20:00</string>
    <string name="_07_00_08_00">07:00–08:00</string>
    <string name="_10_00_11_00">10:00–11:00</string>
    <string name="_11_00_12_00">11:00–12:00</string>
    <string name="_12_00_13_00">12:00–13:00</string>
    <string name="_13_00_14_00">13:00–14:00</string>
    <string name="_14_00_15_00">14:00–15:00</string>
    <string name="_15_00_16_00">15:00–16:00</string>
    <string name="_16_00_17_00">16:00–17:00</string>
    <string name="_17_00_18_00">17:00–18:00</string>
    <string name="_18_00_19_00">18:00–19:00</string>
    <string name="zemljevid">Zemljevid</string>
    <string name="kmetije">Kmetije</string>
    <string name="uporabnik">Uporabnik</string>
    <string name="kosarica">Košarica</string>
    <string name="seznam">Seznam</string>
    <string name="zelje">Želje</string>
    <string name="zgodovina">Zgodovina</string>
    <string name="testni_uporabnik_ali_kmetija">Testni uporabnik ali kmetija</string>
    <string name="testni_uporabnik_ali_kmetija_email">testni.uporabnik@ali.kmetija</string>
    <string name="odjava">Odjava</string>
    <string name="narocila">Naročila</string>
    <string name="artikli">Artikli</string>
    <string name="vsi_artikli">VSI ARTIKLI</string>
    <string name="vse_kategorije">VSE KATEGORIJE</string>
    <string name="prilo_i_fotografijo_kmetije">Priloži fotografijo kmetije</string>
    <string name="ime_artikla">IME ARTIKLA</string>
    <string name="cena">CENA</string>
    <string name="dash">€ /</string>
    <string name="na">na </string>
    <string name="omeji_zalogo">Omeji zalogo</string>
    <string name="enota">ENOTA</string>
    <string name="zavrzi_artikel">Zavrzi artikel</string>
    <string name="zaloga_artikla">ZALOGA</string>
    <string name="neomejeno">Neomejeno</string>
    <string name="hint_kolicine_zaloga">Količina (npr. 10)</string>
    <string name="hint_enote_zaloga">Enote (npr. kg)</string>
    <string name="hint_kolicine_kupovanje">5.1</string>
    <string name="ko_arica_je_prazna">Košarica je prazna.</string>
    <string name="_0_0">0.0</string>
    <string name="_0">0</string>
    <string name="skupaj">Skupaj:</string>
    <string name="euro_sign">€</string>
    <string name="nadaljuj">NADALJUJ</string>
    <string name="izprazni">Izprazni</string>
    <string name="na_voljo">Na voljo:</string>
    <string name="slika_kmetije">Slika kmetije</string>
    <string name="aktivna">AKTIVNA: </string>
    <string name="preklici">Prekliči</string>
    <string name="potrdi">POTRDI</string>
    <string name="preklicano">PREKLICANO</string>
    <string name="farm_creator_explain_address">Vnesite naslov kmetije, kjer lahko kupci prevzamejo naročene artikle.</string>
    <string name="postna_stevilka">Poštna številka.</string>
    <string name="vnesite_kraj">Vnesite kraj.</string>
    <string name="nov_artikel">NOV ARTIKEL</string>
    <string name="urejanje_kategorije">UREJANJE KATEGORIJE</string>
    <string name="ustvari_kategorijo">USTVARI KATEGORIJO</string>
    <string name="izbri_i_kategorijo">IZBRIŠI KATEGORIJO</string>
    <string name="nova_kategorija">Nova kategorija</string>
    <string name="dodaj_sliko">DODAJ SLIKO</string>
    <string name="slash">/</string>
    <string name="shrani_artikel">SHRANI ARTIKEL</string>
    <string name="izbrisi_artikel">Izbriši artikel</string>
    <string name="kolicina">KOLIČINA</string>
    <string name="zaloga">ZALOGA</string>
    <string name="v_kosarico">V KOŠARICO</string>
    <string name="euro">€</string>
    <string name="na_zalogi">na zalogi</string>
    <string name="st_narocil">ŠT NAROČIL: </string>
    <string name="pojdi">Pojdi</string>
    <string name="uredi_profil">Uredi profil</string>
    <string name="elektronska_posta">Elektronska pošta</string>
    <string name="moj_priimek_je">Moj priimek je</string>
    <string name="delovni_cas">Delovni čas</string>
    <string name="notifikacije">Notifikacije</string>
    <string name="shrani_spremembe">SHRANI SPREMEMBE</string>
    <string name="zavrzi_spremembe">ZAVRZI SPREMEMBE</string>
    <string name="prijava">PRIJAVA</string>
    <string name="geslo">Geslo</string>
    <string name="potrditev_identitete">Potrditev identitete</string>
    <string name="reauth_explanation">Prosimo vas da se ponovno prijavite s starim elektronskim naslovom in geslom.</string>
</resources>