<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_16dp"
    tools:context=".SignInUp.SignUp.UserNameFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pop_to_choser_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/red_normal"
        android:src="@drawable/ic_clear"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_to_choser_btn"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/moje_ime_je"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/blue_normal" />

    <View
        android:id="@+id/center_view_userNameFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_et_userNameFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_view_userNameFragment"
        android:hint="@string/vnesite_ime"
        android:inputType="textPersonName"
        android:textColorHint="@color/blue_light" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/surrname_et_userNameFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_et_userNameFragment"
        android:hint="@string/vnesite_priimek"
        android:inputType="textPersonName"
        android:textColorHint="@color/blue_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/surrname_et_userNameFragment"
        android:layout_margin="@dimen/margin_4dp"
        android:text="@string/ime_pojasnilo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/blue_light" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/naprej"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

</RelativeLayout>