<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_16"
    tools:context=".SignInUp.CreateAFarm.FarmLocationFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pop_to_choser_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/red_normal"
        android:src="@drawable/ic_clear"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_to_choser_btn"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/naslov_kmetije"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/blue_normal" />

    <View
        android:id="@+id/center_view_farmNameFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/location_et_farmLocationFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/center_view_farmNameFragment"
        android:hint="@string/vnesite_naslov_kmetije"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/blue_light" />

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_et_farmLocationFragment"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/postalNum_et_farmLocationFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/postna_stevilka"
            android:inputType="number"
            android:textColorHint="@color/blue_light" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/city_et_farmLocationFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/vnesite_kraj"
            android:inputType="textPostalAddress"
            android:textColorHint="@color/blue_light" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin1"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:layout_marginBottom="@dimen/dp_4"
        android:text="@string/farm_creator_explain_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/blue_light" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn_farmLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/naprej"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

</RelativeLayout>