<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_16"
    tools:context=".SignInUp.SignUp.UserPasswordFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pop_to_choser_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/red_normal"
        android:src="@drawable/ic_clear"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pop_to_choser_btn"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/moje_geslo_naj_bo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/blue_normal" />

    <View
        android:id="@+id/center_view_userPasswordFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_et_UserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_view_userPasswordFragment"
        android:hint="@string/vnesite_geslo"
        android:inputType="textPassword"
        android:textColorHint="@color/blue_light" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_repeat_et_UserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_et_UserPassword"
        android:hint="@string/ponovite_geslo"
        android:inputType="textPassword"
        android:textColorHint="@color/blue_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_repeat_et_UserPassword"
        android:layout_margin="@dimen/dp_4"
        android:text="@string/z_vne_enim_geslom_se_lahko_prijavljate_v_profil"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/blue_light" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn_userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/naprej"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
</RelativeLayout>